--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Just the simplest page.">
+    <title>Webpage</title>
     <!-- Hmmm... does jQuery get used anywhere? -->
     <script src="jquery-1.12.4.js"></script>
     <link rel="stylesheet" href="./style.css">
@@ -15,7 +16,7 @@
         <h1>A page</h1>
         <!-- My favourite 90s music compilation is 'No Alternative' -->
         <!-- Also... is it a button? -->
-        <img src="doc.svg" width="200" height="200">
+        <img src="doc.svg" alt="a piece of written paper" width="200" height="200">
         <!-- This URL seems fishy. -->
         <!-- Also, links to other domains should have the attribute `rel="noopener"` or `rel="noreferrer"`. -->
         <p>Valid according to the <a target="_blank" href="https://www.w3.org/">World Wide Web Consortium</a></p>
